# cryptopals

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  conanfile.txt
1.basics/: 1.hex_to_base64.cpp  2.fixed_xor.cpp  3.single-byte_xor_cipher.cpp  4.single-byte_xor_detect.cpp  5.repeating-key_xor.cpp  6.repeating-key_xor_break.cpp  7.aes_in_ecb.cpp  7.cryptopp_ecb.cpp  8.detect_aes_in_ecb.cpp  byte_xor.cpp  byte_xor.h  utils.cpp  utils.h
utils/: base64.cpp  base64.h  utils.cpp  utils.h
